# myfirstgtkapp

./: meson.build
data/: com.github.therocker7421.myfirstgtkapp.desktop  myfirstgtkapp.appdata.xml
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  ca.po  com.github.therocker7421.myfirstgtkapp.pot  de.po  fr.po  gb.po  it.po
src/: Application.vala
